--- a/IMBD_Sentiment_Analysis_Using_LSTM.ipynb
+++ b/IMBD_Sentiment_Analysis_Using_LSTM.ipynb
@@ -20,7 +20,7 @@
       "cell_type": "markdown",
       "source": [
         "## **Problem Statement:**\n",
-        "- Build a sentiment analysis model using Recurrent Neural Networks (RNNs) to\n",
+        "- Build a sentiment analysis model using LSTM to\n",
         "classify movie reviews from the IMDB dataset into positive or negative\n",
         "sentiments.\n",
         "\n",
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "5UIFbI6Yw8LM"
       },
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "zY99_bHUzFqi"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -105,7 +105,7 @@
         "id": "lg1-aHvuWylN",
         "outputId": "e683104c-5234-4a26-ab39-1086a7d2315f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -151,7 +151,7 @@
         "id": "7KXYQgU7xhJ2",
         "outputId": "571cdead-64c1-4548-d676-1b84b0215bd0"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +184,7 @@
       "metadata": {
         "id": "rMO1iLjHx1RE"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,7 +211,7 @@
         "id": "-Np42N_lx5TG",
         "outputId": "2fe49130-6cc7-4805-aabb-8cf8e60828c0"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -273,7 +273,7 @@
         "id": "2X6lzrPfx-11",
         "outputId": "748da15c-fcbf-440f-deff-597e1d0ace78"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -328,7 +328,7 @@
         "id": "wnRsq8O7yzhq",
         "outputId": "08a8d341-32b3-4dbf-e635-e939df478f16"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -411,7 +411,7 @@
         "id": "jcbM6FRs0e1y",
         "outputId": "98781eac-d41f-4fd7-d517-5042a2c4185a"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -455,7 +455,7 @@
         "id": "GNqblU5U0UJp",
         "outputId": "77e17216-d915-4ae0-f1b3-fdd77219f99c"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,7 +478,7 @@
       "metadata": {
         "id": "uYqP2D9JSR46"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     }
   ]
